imerholding.internal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imerholding-service
spec:
  selector:
    app: imerholding
  ports:
    - port: 80
      targetPort: 80
