imerholding.internal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imerholding-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - imerholding.internal
    secretName: tls-certificate
  rules:
  - host: imerholding.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imerholding-service
            port:
              number: 80
